--- a/go-micro/project/docker-compose.yml
+++ b/go-micro/project/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       dockerfile: ./../authentication-service/authentication-service.dockerfile
     restart: always
     ports:
-      - "8082:80"
+      - "8081:80"
     deploy:
       mode: replicated
       replicas: 1
@@ -30,6 +30,17 @@ services:
     build:
       context: ./../logger-service
       dockerfile: ./../logger-service/logger-service.dockerfile
+    restart: always
+    ports:
+      - "8082:80"
+    deploy:
+      mode: replicated
+      replicas: 1
+  
+  listener-service:
+    build:
+      context: ./../listener-service
+      dockerfile: ./../listener-service/listener-service.dockerfile
     restart: always
     deploy:
       mode: replicated
@@ -51,9 +62,12 @@ services:
       - ./db-data/postgres/:/var/lib/postgresql/data/
 
   mongo:
-    image: 'mongo:4.2.16-bionic'
+    image: 'mongo:latest'
     ports:
       - "27017:27017"
+    deploy:
+      mode: replicated
+      replicas: 1
     environment:
       MONGO_INITDB_DATABASE: logs
       MONGO_INITDB_ROOT_USERNAME: admin
@@ -61,3 +75,19 @@ services:
     volumes:
       - ./db-data/mongo/:/data/db
       
+  
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+
+  rabbitmq:
+    image: 'rabbitmq:3-alpine'
+    ports:
+      - "5672:5672"
+    deploy: 
+      mode: replicated
+      replicas: 1
+    volumes:
+      - ./db-data/rabbitmq/:/var/lib/rabbitmq/
