--- a/go-micro/project/docker-compose.yml
+++ b/go-micro/project/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       dockerfile: ./../authentication-service/authentication-service.dockerfile
     restart: always
     ports:
-      - "8081:80"
+      - "8085:80"
     deploy:
       mode: replicated
       replicas: 1
@@ -31,20 +31,18 @@ services:
       context: ./../logger-service
       dockerfile: ./../logger-service/logger-service.dockerfile
     restart: always
-    ports:
-      - "8082:80"
     deploy:
       mode: replicated
       replicas: 1
   
-  listener-service:
-    build:
-      context: ./../listener-service
-      dockerfile: ./../listener-service/listener-service.dockerfile
-    restart: always
-    deploy:
-      mode: replicated
-      replicas: 1
+  # listener-service:
+  #   build:
+  #     context: ./../listener-service
+  #     dockerfile: ./../listener-service/listener-service.dockerfile
+  #   restart: always
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
 
   postgres:
     image: 'postgres:latest'
@@ -68,26 +66,30 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-    environment:
-      MONGO_INITDB_DATABASE: logs
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
-    volumes:
-      - ./db-data/mongo/:/data/db
       
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: password
+ 
   
-  mailhog:
-    image: 'mailhog/mailhog:latest'
-    ports:
-      - "1025:1025"
-      - "8025:8025"
+  # mailhog:
+  #   image: 'mailhog/mailhog:latest'
+  #   ports:
+  #     - "1025:1025"
+  #     - "8025:8025"
 
-  rabbitmq:
-    image: 'rabbitmq:3-alpine'
-    ports:
-      - "5672:5672"
-    deploy: 
-      mode: replicated
-      replicas: 1
-    volumes:
-      - ./db-data/rabbitmq/:/var/lib/rabbitmq/
+  # rabbitmq:
+  #   image: 'rabbitmq:3-alpine'
+  #   ports:
+  #     - "5672:5672"
+  #   deploy: 
+  #     mode: replicated
+  #     replicas: 1
+  #   volumes:
+  #     - ./db-data/rabbitmq/:/var/lib/rabbitmq/
