--- a/go-micro/project/docker-compose.yml
+++ b/go-micro/project/docker-compose.yml
@@ -46,6 +46,24 @@ services:
   #     mode: replicated
   #     replicas: 1
 
+  mailer-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_ENCRYPTION: none
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      FROM_NAME: "John Smith"
+      FROM_ADDRESS: john.smith@example.com
+
   postgres:
     image: 'postgres:latest'
     ports:
@@ -80,11 +98,11 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: password
  
   
-  # mailhog:
-  #   image: 'mailhog/mailhog:latest'
-  #   ports:
-  #     - "1025:1025"
-  #     - "8025:8025"
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
 
   # rabbitmq:
   #   image: 'rabbitmq:3-alpine'
